--- a/mstudy.html
+++ b/mstudy.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">	
 <title>HTML5 개인 포트폴리오 홈페이지</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 
 <link rel="stylesheet" type="text/css" href="mportpolio.css"/>
 </head>
@@ -21,12 +21,15 @@
   	<div class="content">
 	<section class="section1">  
 		<h3>Web Team Project</h3>
-		<!-- bootstrap 사용 -->
-		<ul class="list-group">
-			<li class="list-group-item"><a href="https://github.com/jiyep/TeamProject">깃허브</a></li>
-			<li class="list-group-item"><a href="https://www.youtube.com/watch?v=XfDSQDXMA_Y">발표영상</a></li>
-			<li class="list-group-item"><a href="https://www.10000recipe.com/">참고사이트</a></li>
-		  </ul>
+		<!-- Bulma 사용 -->
+		  <div class="buttons">
+			<button class="button is-primary is-light"><a href="https://github.com/jiyep/TeamProject">깃허브</a></button>
+			<button class="button is-link is-light"><a href="https://www.youtube.com/watch?v=XfDSQDXMA_Y">발표영상</a></button>
+			<button class="button is-primary is-light"><a href="https://www.10000recipe.com/">참고사이트</a></button>
+		  </div>
+		
+
+		
 	</section>
 
 	<aside>
