--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<span><a href="minfo.html"> 인적 </a></span>
 		<span><a href="mstudy.html"> 팀 프로젝트 </a></span>
 		<span><a href="mcareer.html"> 개인 프로젝트 </a></span>
+		<span><a href="echart.html"> echart </a></span>
 	</nav>
   <div class="container mt-3">
 	<h3>자기소개</h3>
