--- a/minfo.html
+++ b/minfo.html
@@ -27,6 +27,7 @@
 		<span><a href="minfo.html"> 인적 </a></span>
 		<span><a href="mstudy.html"> 팀 프로젝트 </a></span>
 		<span><a href="mcareer.html"> 개인 프로젝트 </a></span>
+		<span><a href="echart.html"> echart </a></span>
   <div class="content">
 	<section class="section1">  
 		<h3>인적사항</h3>
