--- a/mcareer.html
+++ b/mcareer.html
@@ -18,6 +18,7 @@
 		<span><a href="minfo.html"> 인적 </a></span>
 		<span><a href="mstudy.html"> 팀 프로젝트 </a></span>
 		<span><a href="mcareer.html"> 개인 프로젝트 </a></span>
+		<span><a href="echart.html"> echart </a></span>
 	</nav>
 	
 	<!-- uikit 사용 --> 
